tests/snapshots/sfc/ts/patches__arrow_function_with_multiple_statements_in_v_for.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const items = ref([{ id: 1, value: 0 }])

return (_ctx: any,_cache: any) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(items.value, (item) => {
    return (_openBlock(), _createElementBlock("div", { key: item.id }, [
      _createElementVNode("button", {
        onClick: () => {
      item.value++;
      console.log(item.id);
    }
      }, _toDisplayString(item.value), 9 /* TEXT, PROPS */, ["onClick"])
    ]))
  }), 128 /* KEYED_FRAGMENT */))
}
}

})
