tests/snapshots/sfc/ts/patches__callback_with_typed_parameters.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


interface Item {
  id: number
  name: string
}


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const items: Item[] = []

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(items.map((item) => item.name).join(", ")), 1 /* TEXT */))
}
}

})
