tests/snapshots/sfc/ts/patches__component_event_member_expression_handler_is_invoked.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { resolveComponent as _resolveComponent, openBlock as _openBlock, createBlock as _createBlock, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const actionHandler = useActionHandler()

return (_ctx: any,_cache: any) => {
  const _component_ActionPanel = _resolveComponent("ActionPanel")

  return (_openBlock(), _createBlock(_component_ActionPanel, {
    onSelectItem: _cache[0] || (_cache[0] = (...args) => (_unref(actionHandler).selectItem && _unref(actionHandler).selectItem(...args)))
  }))
}
}

})
