tests/snapshots/sfc/ts/patches__defineemits_binding_preserves_blank_line_before_setup_body.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  emits: ["change"],
  setup(__props, { emit: __emit }) {

const emit = __emit

function handleClick() {
  emit('change', 'hello')
}

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", { onClick: handleClick }, "Click"))
}
}

})
